Link to Collection Textfield does not become active automatically #64713

Closed
opened 2019-05-16 16:17:24 +02:00 by Sebastian Koenig · 3 comments

System Information
Operating system: elementaryOS 0.4.1
Graphics card: GTX 1080

Blender Version
Broken: 2.80, d93a47b7bb

Short description of error
If you move an object to a new collection per shortcut M>NewCollection, the textfield becomes active automatically, allowing you to enter the name immediately without having to activate the textfield with your mouse. Works the same as with Rename Active Item.
However, if you use the operator Link to Collection (Shift+M>NewCollection), the textfield is not activated, so you have to use the mouse to be able to enter the name of the new collection. This slows down the workflow and is not consistent with the other two operators mentioned above. Probably just an oversight, but still. :)

Exact steps for others to reproduce the error
Open Blender, press Shift+M and choose New Collection. You first have to click to activate the textfield to enter the name.

**System Information** Operating system: elementaryOS 0.4.1 Graphics card: GTX 1080 **Blender Version** Broken: 2.80, d93a47b7bbda **Short description of error** If you move an object to a new collection per shortcut M>NewCollection, the textfield becomes active automatically, allowing you to enter the name immediately without having to activate the textfield with your mouse. Works the same as with Rename Active Item. However, if you use the operator Link to Collection (Shift+M>NewCollection), the textfield is not activated, so you have to use the mouse to be able to enter the name of the new collection. This slows down the workflow and is not consistent with the other two operators mentioned above. Probably just an oversight, but still. :) **Exact steps for others to reproduce the error** Open Blender, press Shift+M and choose New Collection. You first have to click to activate the textfield to enter the name.
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k
Campbell Barton was assigned by Sebastian Koenig 2019-05-16 16:17:45 +02:00

This issue was referenced by e02f68c577

This issue was referenced by e02f68c57757f07fdacdc9db4a0ad38533dd74fb
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64713
No description provided.