Fix T64713: Link to Collection Textfield does not become active automatically