source/blender/editors/object/object_edit.c
@@ -1779,4 +1779,5 @@ void OBJECT_OT_link_to_collection(wmOperatorType *ot)
                         "Name",
                         "Name of the newly added collection");
   RNA_def_property_flag(prop, PROP_SKIP_SAVE);
+  ot->prop = prop;
 }
